
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_APPEND ;
 int O_CREAT ;
 int O_RDWR ;
 int O_WRONLY ;
 int close (int) ;
 int dup2 (int,int) ;
 int fflush (int ) ;
 char* logname ;
 int logs_reopen_cnt ;
 int open (char*,int,int) ;
 int sigusr1_cnt ;
 int stderr ;
 int stdout ;
 int vkprintf (int,char*) ;

__attribute__((used)) static void reopen_logs (void) {
  logs_reopen_cnt = sigusr1_cnt;
  int fd;
  fflush (stdout);
  fflush (stderr);
  if ((fd = open ("/dev/null", O_RDWR, 0)) != -1) {
    dup2 (fd, 0);
    dup2 (fd, 1);
    dup2 (fd, 2);
    if (fd > 2)
      close (fd);
  }
  if (logname && (fd = open (logname, O_WRONLY|O_APPEND|O_CREAT, 0640)) != -1) {
    dup2 (fd, 1);
    dup2 (fd, 2);
    if (fd > 2)
      close (fd);
  }
  vkprintf (1, "logs reopened.\n");
}
